--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
   <header class="header">
     <nav class="header-nav">
-      <a href="/index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <ul class="header-nav-menu list">
         <li class="menu-iteam">
-          <a href="/index.html" class="menu-link">Студія</a>
+          <a href="index.html" class="menu-link">Студія</a>
         </li>
         <li class="menu-iteam">
-          <a href="/portfolio.html" class="menu-link">Портфоліо</a>
+          <a href="portfolio.html" class="menu-link">Портфоліо</a>
         </li>
         <li class="menu-iteam"><a href="#" class="menu-link">Контакти</a></li>
       </ul>
