Corrections DZ2 CSS

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="uk">
 
 <head>
-  <!-- Нормалізатор -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-  <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <!-- Підключаю шрифти -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <title>Студія</title>
+  <!-- Нормалізатор -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <ul class="header-nav-menu list">
         <li class="menu-iteam">
-          <a href="index.html" class="menu-link">Студія</a>
+          <a href="index.html" class="menu-link current">Студія</a>
         </li>
         <li class="menu-iteam">
           <a href="portfolio.html" class="menu-link">Портфоліо</a>
